syntax = "proto3";
import "rpc_base.proto";
option java_generic_services = true;
option java_package = "org.marketcetera.saclient.rpc";
option java_outer_classname = "SAClientRpc";

message ModuleURN {
    string value = 1;
}

message ModuleInfo {
    string payload = 1;
}

message ProvidersRequest {
    string sessionId = 1;
}

message ProvidersResponse {
    repeated ModuleURN provider = 1;
}

message InstancesRequest {
    string sessionId = 1;
    ModuleURN provider = 2;
}

message InstancesResponse {
    repeated ModuleURN instance = 1;
}

message ModuleInfoRequest {
    string sessionId = 1;
    ModuleURN instance = 2;
}

message ModuleInfoResponse {
    ModuleInfo info = 1;
}

message StartRequest {
    string sessionId = 1;
    ModuleURN instance = 2;
}

message StartResponse {
}

message StopRequest {
    string sessionId = 1;
    ModuleURN instance = 2;
}

message StopResponse {
}

message DeleteRequest {
    string sessionId = 1;
    ModuleURN instance = 2;
}

message DeleteResponse {
}

message GetPropertiesRequest {
    string sessionId = 1;
    ModuleURN instance = 2;
}

message GetPropertiesResponse {
    Properties properties = 1;
}

message SetPropertiesRequest {
    string sessionId = 1;
    ModuleURN instance = 2;
    Properties properties = 4;
}

message SetPropertiesResponse {
    Properties properties = 1;
}

message CreateStrategyRequest {
    string sessionId = 1;
    CreateStrategyParameters createStrategyParameters = 2;
}

message CreateStrategyResponse {
    ModuleURN instance = 1;
}

message StrategyCreateParmsRequest {
    string sessionId = 1;
    ModuleURN instance = 2;
}

message StrategyCreateParmsResponse {
    CreateStrategyParameters createStrategyParameters = 1;
}

message SendDataRequest {
    string sessionId = 1;
    string payload = 2;
}

message SendDataResponse {
}

message Properties {
    repeated Entry entry = 1;
}

message Entry {
    string key = 1;
    string value = 2;
}

message CreateStrategyParameters {
    string payload = 1;
}

service SAClientServiceRpc {
    rpc login(LoginRequest) returns (LoginResponse);
    rpc logout(LogoutRequest) returns (LogoutResponse);
    rpc heartbeat(HeartbeatRequest) returns (stream HeartbeatResponse) {}
    rpc getProviders(ProvidersRequest) returns (ProvidersResponse);
    rpc getInstances(InstancesRequest) returns (InstancesResponse);
    rpc getModuleInfo(ModuleInfoRequest) returns (ModuleInfoResponse);
    rpc start(StartRequest) returns (StartResponse);
    rpc stop(StopRequest) returns (StopResponse);
    rpc delete(DeleteRequest) returns (DeleteResponse);
    rpc getProperties(GetPropertiesRequest) returns (GetPropertiesResponse);
    rpc setProperties(SetPropertiesRequest) returns (SetPropertiesResponse);
    rpc createStrategy(CreateStrategyRequest) returns (CreateStrategyResponse);
    rpc getStrategyCreateParms(StrategyCreateParmsRequest) returns (StrategyCreateParmsResponse);
    rpc sendData(SendDataRequest) returns (SendDataResponse);
}
